# bellperson

./: Cargo.toml  README.md  build.rs  signature
.github/workflows/: ci.yml
src/: domain.rs  lib.rs  multiexp.rs
src/gadgets/: blake2s.rs  multipack.rs  sha256.rs  uint32.rs
src/gadgets/test/: mod.rs
src/gpu/: locks.rs  multiexp.rs
src/groth16/: ext_supraseal.rs  generator.rs  mapped_params.rs  multiscalar.rs  params.rs  proof.rs  verifier.rs  verifying_key.rs
src/groth16/aggregate/: accumulator.rs  commit.rs  inner_product.rs  mod.rs  poly.rs  proof.rs  prove.rs  srs.rs  verify.rs
src/groth16/aggregate/msm/: fixed_base.rs
src/groth16/prover/: mod.rs  native.rs  supraseal.rs
src/util_cs/: metric_cs.rs
tests/: dummy_engine.rs  gpu_provers.rs  groth16.rs  groth16_aggregation.rs  mimc.rs  minroot.rs
verifier-bench/: Cargo.toml
