
[package]
name = "verifier-bench"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
bellperson = { package = "nam-bellperson", path = "../" }
ff = "0.13.0"
group = "0.13.0"
structopt = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
rand = "0.8"
bincode = "1.3.1"
pairing = "0.23"
blstrs = { package = "nam-blstrs", version = "0.7.1-nam.0" }

[features]
default = ["groth16"]
cuda = ["bellperson/cuda", "blstrs/gpu"]
opencl = ["bellperson/opencl", "blstrs/gpu"]
groth16 = ["bellperson/groth16"]
